fix: better amount truncating

--- a/src/components/new-arbitrable-tx/new-arbitrable-tx.scss
+++ b/src/components/new-arbitrable-tx/new-arbitrable-tx.scss
@@ -144,6 +144,7 @@
 
     &-input-file {
       grid-area: inputFile;
+      color: black;
     }
 
     &-error-file {
