--- a/src/components/new-evidence-arbitrable-tx/new-evidence-arbitrable-tx.scss
+++ b/src/components/new-evidence-arbitrable-tx/new-evidence-arbitrable-tx.scss
@@ -88,8 +88,4 @@
   input {
     background: rgba(255, 255, 255, 0.3) !important;
   }
-
-  &-filename {
-    color: white !important;
-  }
 }
